RESOLVED FIXED100488
Printing should use use high resolution images when available
https://bugs.webkit.org/show_bug.cgi?id=100488
Summary Printing should use use high resolution images when available
Kenneth Rohde Christiansen
Reported 2012-10-26 02:56:25 PDT
SSIA
Attachments
Patch (6.91 KB, patch)
2012-10-26 03:01 PDT, Kenneth Rohde Christiansen
koivisto: review+
webkit.review.bot: commit-queue-
Kenneth Rohde Christiansen
Comment 1 2012-10-26 03:01:09 PDT
WebKit Review Bot
Comment 2 2012-10-26 05:19:25 PDT
Comment on attachment 170862 [details] Patch Rejecting attachment 170862 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/14607049
Kenneth Rohde Christiansen
Comment 3 2012-10-26 05:28:19 PDT
landed in 132633
Note You need to log in before you can comment on or make changes to this bug.