Printing should use use high resolution images when available https://bugs.webkit.org/show_bug.cgi?id=100488

Reviewed by Antti Koivisto.

The images loaded using -webkit-device-pixel-ratio depends on
the display type (deviceScaleFactor) and thus affects which
images are being used for printing. Printing should always
use the higher resolution images (aka 'retina' images).

Source/WebCore:

Test: fast/media/mq-pixel-ratio-print.html

* css/MediaQueryEvaluator.cpp:
(WebCore::device_pixel_ratioMediaFeatureEval):

LayoutTests:

Added a test testing -webkit-device-pixel-ratio media query
in conjuntion with 'print' media type.

* fast/media/mq-pixel-ratio-print-expected.txt: Added.
* fast/media/mq-pixel-ratio-print.html: Added.

Canonical link: https://commits.webkit.org/118544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132633 268f45cc-cd09-0410-ab3c-d52691b4dbfc